Added browserify to bundle js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="random">Select Random</button>
     <h2>Current CSS Background</h2>
     <h3></h3>
-    <script src="style.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
